# nfi_thuis

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build-docker.yml  test-application.yml
src/sequences/: domains.py  main.py
tests/benchmark/: test_benchmark.py
tests/integration/: test_api.py
tests/unit/: test_sequences.py
