[tool.poetry]
name = "nfi-thuis-opdracht"
version = "0.1.0"
description = ""
authors = ["DNB <daniel.vink@mn.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
