[tool.poetry]
name = "nfi-thuis-opdracht"
version = "0.1.0"
description = ""
authors = ["DNB <daniel.vink@mn.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest = "^8.3.3"
ruff = "^0.8.0"
ipython = "^8.29.0"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pytest-benchmark = "^5.1.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
